Fix form input overflow scrollingnot working and change overall style

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body {
 #root {
   display: flex;
   flex-direction: column;
-  padding: 30px 300px 30px 300px;
+  padding: 0px 400px 0px 400px;
+  min-height: 100vh;
   max-height: 100vh;
 }
